--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-demo",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://ryuseiri.github.io/VueDemoUI/",
   "scripts": {
     "serve": "vue-cli-service serve",
